update index.html and style.css

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,12 @@
         </nav>
     </header>
     <main>
-        <H1>a</H1>
+        <h1>Welcome!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis earum eos debitis nulla reprehenderit iure quisquam eaque minima est consequuntur, quos accusantium laborum totam nobis praesentium? Est doloremque aliquam amet!
+        Quos reiciendis eius nemo vero adipisci harum eaque est? Harum voluptatem repellendus recusandae dolore magni ullam non vero nostrum praesentium placeat, pariatur, cupiditate error modi illum eaque? Nobis, necessitatibus voluptate.
+        Quae ad iusto aspernatur fugiat sed suscipit non nisi, illo dolorum quasi eos cum vitae odio enim expedita! Nemo, dolorem deserunt. A nobis omnis officiis eos possimus. Dolorum, incidunt recusandae.
+        Eveniet optio corrupti laudantium laborum, qui officiis omnis blanditiis molestiae non! Voluptatem accusamus incidunt reiciendis ex ut facilis rem harum necessitatibus magni, architecto reprehenderit repudiandae odit? Atque voluptates ducimus quis?
+        At ipsam corrupti tempore error nostrum voluptate? Sint tenetur magni accusantium. Reprehenderit voluptates suscipit voluptatibus nobis itaque, atque facere blanditiis animi beatae? Facilis repellat distinctio doloremque alias, dolorem repellendus magnam.</p>
     </main>
     <footer>
         <nav>
