--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">NERDA<span>SSO</span>.COM</a>
+        <a href="index.html" class="logo"><img src="../assets/img/logo-nerdasso-removebg-preview.png" width="300" alt=""></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="sobre.html" class="active">Sobre Nós</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
