--- a/pages/login.html
+++ b/pages/login.html
@@ -11,13 +11,12 @@
 </head>
 <body>
     <header>
-        <img src="../assets/img/logo-nerdasso-removebg-preview.png" width="300" alt="">
+     <a href="index.html" class="logo"><img src="../assets/img/logo-nerdasso-removebg-preview.png" width="300" alt=""></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#produtos">Produtos</a></li>
-                <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <li><a href="index.html#contato">Contato</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
         <div class="user-actions">
