--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Nerdasso.com</title>
-    <link rel="stylesheet" href="../css/contato.css">
+    <link rel="stylesheet" href="../styles/contato.css">
 </head>
 <body>
     <header>
