--- a/pages/login.html
+++ b/pages/login.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Nerdasso.com</title>
-    <link rel="stylesheet" href="../css/login.css">
-    <style>
-        
-    </style>
+    <link rel="stylesheet" href="../styles/login.css">
+    
 </head>
 <body>
     <header>
