01/12/25 - Adicao de novas imagens de produtos e de perfis

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,6 +42,7 @@
                         <option value="livro">Livros</option>
                         <option value="brinquedo">Brinquedos</option>
                         <option value="acessorio">Acessórios</option>
+                        <option value="poster">Pôsteres</option>
                     </select>
                 </div>
                 <div class="filter-group">
@@ -53,6 +54,7 @@
                         <option value="marvel">Marvel</option>
                         <option value="dc">DC Comics</option>
                         <option value="anime">Anime</option>
+                        <option value="outras">Outras</option>
                     </select>
                 </div>
             </div>
@@ -68,7 +70,7 @@
         <div class="products-grid">
                 <!-- Produto 1 -->
                 <div class="product-card">
-                    <img src="../assets/img/products/spiderman.PNG" alt="" class="product-image">
+                    <img src="../assets/img/products/spiderman.PNG" alt="Chaveiro Homem aranha sem volta pra casa" class="product-image">
                     <div class="product-info">
                         <h3 class="product-title">Chaveiro Homem aranha sem volta pra casa</h3>
                         <div class="product-price">R$ 49,90</div>
@@ -81,10 +83,10 @@
 
                 <!-- Produto 2 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Livro+Harry+Potter" alt="Livro Harry Potter e a Pedra Filosofal" class="product-image">
+                    <img src="../assets/img/products/obi-wan.PNG" alt="Caneca Star Wars Obi Wan Kenobi" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Livro Harry Potter e a Pedra Filosofal</h3>
-                        <div class="product-price">R$ 39,90</div>
+                        <h3 class="product-title">Caneca Star Wars Obi Wan Kenobi</h3>
+                        <div class="product-price">R$ 75,00</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -94,10 +96,10 @@
 
                 <!-- Produto 3 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Action+Figure+Homem+de+Ferro" alt="Action Figure Homem de Ferro" class="product-image">
+                    <img src="../assets/img/products/harry-potter.PNG" alt="Funko Pop Harry Potter" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Action Figure Homem de Ferro</h3>
-                        <div class="product-price">R$ 89,90</div>
+                        <h3 class="product-title">Funko Pop Harry Potter</h3>
+                        <div class="product-price">R$ 100,25</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -107,10 +109,11 @@
 
                 <!-- Produto 4 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Caneca+Super+Mario" alt="Caneca Super Mario" class="product-image">
+                    <img src="../assets/img/products/batman.PNG" alt="Action Figure - Batman e a Motocicleta Bat-Pod
+                    " class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Caneca Super Mario</h3>
-                        <div class="product-price">R$ 29,90</div>
+                        <h3 class="product-title">Action Figure - Batman e a Motocicleta Bat-Pod</h3>
+                        <div class="product-price">R$ 518,73</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -120,10 +123,10 @@
 
                 <!-- Produto 5 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Camiseta+Capitão+América" alt="Camiseta Capitão América" class="product-image">
+                    <img src="../assets/img/products/darth-vader.PNG" alt="Balde de pipoca - Darth Vader" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Camiseta Capitão América</h3>
-                        <div class="product-price">R$ 49,90</div>
+                        <h3 class="product-title">Balde de pipoca - Darth Vader</h3>
+                        <div class="product-price">R$ 80,47</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -133,10 +136,10 @@
 
                 <!-- Produto 6 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Livro+Senhor+dos+Anéis" alt="Livro O Senhor dos Anéis" class="product-image">
+                    <img src="../assets/img/products/hubeo-hagrid.PNG" alt="Funko Pop Rúbeo Hagrid" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Livro O Senhor dos Anéis</h3>
-                        <div class="product-price">R$ 45,90</div>
+                        <h3 class="product-title">Funko Pop Rúbeo Hagrid</h3>
+                        <div class="product-price">R$ 75,84</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -146,10 +149,10 @@
 
                 <!-- Produto 7 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Funko+Pop+Batman" alt="Funko Pop Batman" class="product-image">
+                    <img src="../assets/img/products/the-last-of-us.PNG" alt="Caneca The Last Of Us 2" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Funko Pop Batman</h3>
-                        <div class="product-price">R$ 79,90</div>
+                        <h3 class="product-title">Caneca The Last Of Us 2</h3>
+                        <div class="product-price">R$ 40,37</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -159,10 +162,10 @@
 
                 <!-- Produto 8 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Chaveiro+Harry+Potter" alt="Chaveiro Harry Potter" class="product-image">
+                    <img src="../assets/img/products/thor-vs-loke.PNG" alt="Action Figure Thor E Loki Marvel " class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Chaveiro Harry Potter</h3>
-                        <div class="product-price">R$ 19,90</div>
+                        <h3 class="product-title">Action Figure Thor E Loki Marvel </h3>
+                        <div class="product-price">R$ 150,00</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -172,7 +175,7 @@
 
                 <!-- Produto 9 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Camiseta+Mulher+Maravilha" alt="Camiseta Mulher Maravilha" class="product-image">
+                    <img src="../assets/img/products/mulher-maravilha.jpg" alt="Camiseta Mulher Maravilha" class="product-image">
                     <div class="product-info">
                         <h3 class="product-title">Camiseta Mulher Maravilha</h3>
                         <div class="product-price">R$ 49,90</div>
@@ -185,10 +188,10 @@
 
                 <!-- Produto 10 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Livro+Star+Wars" alt="Livro Star Wars: Ascensão Skywalker" class="product-image">
+                    <img src="../assets/img/products/lego-death-star.jpg" alt="LEGO Star Wars Death Star (4016 Peças)" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Livro Star Wars: Ascensão Skywalker</h3>
-                        <div class="product-price">R$ 42,90</div>
+                        <h3 class="product-title">LEGO Star Wars Death Star (4016 Peças)</h3>
+                        <div class="product-price">R$ 2450,80</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -198,10 +201,10 @@
 
                 <!-- Produto 11 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Lego+Millennium+Falcon" alt="Lego Millennium Falcon" class="product-image">
+                    <img src="../assets/img/products/lego-millenium-falcon.webp" alt="Lego Millennium Falcon" class="product-image">
                     <div class="product-info">
                         <h3 class="product-title">Lego Millennium Falcon</h3>
-                        <div class="product-price">R$ 299,90</div>
+                        <div class="product-price">R$ 1359,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                             <a href="#" class="btn btn-secondary">Ver Detalhes</a>
@@ -211,9 +214,9 @@
 
                 <!-- Produto 12 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Mochila+Dragon+Ball+Z" alt="Mochila Dragon Ball Z" class="product-image">
+                    <img src="../assets/img/products/mochila-harry.jfif" alt="Mochila Hogwarts Harry Potte" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Mochila Dragon Ball Z</h3>
+                        <h3 class="product-title">Mochila Hogwarts Harry Potter</h3>
                         <div class="product-price">R$ 89,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
@@ -224,7 +227,7 @@
 
                 <!-- Produto 13 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Camiseta+Homem-Aranha" alt="Camiseta Homem-Aranha" class="product-image">
+                    <img src="../assets/img/products/camiseta-homem-aranha.webp" alt="Camiseta Homem-Aranha" class="product-image">
                     <div class="product-info">
                         <h3 class="product-title">Camiseta Homem-Aranha</h3>
                         <div class="product-price">R$ 49,90</div>
@@ -237,7 +240,7 @@
 
                 <!-- Produto 14 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Livro+Crônicas+de+Nárnia" alt="Livro As Crônicas de Nárnia" class="product-image">
+                    <img src="../assets/img/products/livro-cronicas-de-narnia.webp" alt="Livro As Crônicas de Nárnia" class="product-image">
                     <div class="product-info">
                         <h3 class="product-title">Livro As Crônicas de Nárnia</h3>
                         <div class="product-price">R$ 38,90</div>
@@ -250,9 +253,9 @@
 
                 <!-- Produto 15 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Quebra-Cabeça+Star+Wars" alt="Quebra-Cabeça Star Wars" class="product-image">
+                    <img src="../assets/img/products/hq-super-man.jpg" alt="Quebra-Cabeça Star Wars" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Quebra-Cabeça Star Wars</h3>
+                        <h3 class="product-title">HQ Superman - Capa Dura</h3>
                         <div class="product-price">R$ 59,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
@@ -263,9 +266,9 @@
 
                 <!-- Produto 16 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Boné+Nintendo" alt="Boné Nintendo" class="product-image">
+                    <img src="../assets/img/products/hq-batman-universo.jpg" alt="HQ Batman Universo" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Boné Nintendo</h3>
+                        <h3 class="product-title">HQ Batman Universo</h3>
                         <div class="product-price">R$ 39,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
@@ -276,9 +279,9 @@
 
                 <!-- Produto 17 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Camiseta+Super+Mario" alt="Camiseta Super Mario" class="product-image">
+                    <img src="../assets/img/products/livro-mochileiro-das-galaxias.webp" alt="Camiseta Super Mario" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Camiseta Super Mario</h3>
+                        <h3 class="product-title">Livro O Guia Definitivo do Mochileiro das Galáxias</h3>
                         <div class="product-price">R$ 49,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
@@ -289,9 +292,9 @@
 
                 <!-- Produto 18 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Livro+Batman+Ano+Um" alt="Livro Batman: Ano Um" class="product-image">
+                    <img src="../assets/img/products/livro-harry-potter.jpg" alt="Livro Harry Potter e a Pedra Filosofal" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Livro Batman: Ano Um</h3>
+                        <h3 class="product-title">Livro Harry Potter e a Pedra Filosofal</h3>
                         <div class="product-price">R$ 44,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
@@ -302,9 +305,9 @@
 
                 <!-- Produto 19 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Action+Figure+Wonder+Woman" alt="Action Figure Wonder Woman" class="product-image">
+                    <img src="../assets/img/products/action-figure-luke-skywalker.jpg" alt="Action Figure Luke Skywalker" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Action Figure Wonder Woman</h3>
+                        <h3 class="product-title">Action Figure Luke Skywalker</h3>
                         <div class="product-price">R$ 89,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
@@ -315,9 +318,9 @@
 
                 <!-- Produto 20 -->
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/300x300?text=Pôster+Avengers" alt="Pôster Avengers" class="product-image">
+                    <img src="../assets/img/products/poster-avengers.webp" alt="Pôster Avengers" class="product-image">
                     <div class="product-info">
-                        <h3 class="product-title">Pôster Avengers</h3>
+                        <h3 class="product-title">Pôster Avengers Endgame</h3>
                         <div class="product-price">R$ 24,90</div>
                         <div class="product-actions">
                             <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
