--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -63,19 +63,19 @@
                 
                 <div class="team-grid">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150x150?text=Foto" alt="Rafael Oliveira">
-                        <h4>Rafael Oliveira</h4>
+                        <img src="../assets/img/perfil/anakin.png" alt="Rafael Oliveira">
+                        <h4>Rafael Sebastião</h4>
                         <div class="role">CEO & Fundador</div>
-                        <p>Viciado em Star Wars e colecionador de action figures</p>
+                        <p>Viciado em Star Wars e colecionador de legos action figures</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150x150?text=Foto" alt="Ana Santos">
+                        <img src="../assets/img/perfil/hermione.jpg" alt="Ana Santos">
                         <h4>Ana Santos</h4>
                         <div class="role">Diretora de Produtos</div>
                         <p>Especialista em cultura pop e apaixonada por Harry Potter</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150x150?text=Foto" alt="Carlos Lima">
+                        <img src="../assets/img/perfil/spider-man.png" alt="Carlos Lima">
                         <h4>Carlos Lima</h4>
                         <div class="role">Gerente de Marketing</div>
                         <p>Fã de quadrinhos e expert em estratégias digitais</p>
