10/12/25 - Adicionando boas praticas nos codigos

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Nós - Nerdasso.com</title>
     <link rel="stylesheet" href="../styles/sobre.css" />
-
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo"><img src="../assets/img/logo-nerdasso-removebg-preview.png" width="300" alt=""></a>
+        <a href="index.html" class="logo">
+            <img src="../assets/img/logo-nerdasso-removebg-preview.png" width="300" alt="Logo Nerdasso.com" />
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,74 +25,74 @@
     </header>
 
     <main>
-        <div class="page-header">
+        <section class="page-header">
             <h1>Sobre a Nerdasso.com</h1>
             <p>Conheça nossa história e nossa paixão pela cultura geek</p>
-        </div>
+        </section>
 
-        <div class="about-content">
-            <div class="about-section">
+        <article class="about-content">
+            <section class="about-section">
                 <h2>Nossa História</h2>
                 <p>Fundada em 2020, a Nerdasso.com nasceu da paixão de um grupo de amigos pela cultura geek e nerd. Começamos como uma pequena loja online, vendendo camisetas personalizadas com estampas de nossos filmes, séries e jogos favoritos.</p>
                 <p>Com o tempo, percebemos que existia uma comunidade enorme de fãs como nós, ávidos por produtos de qualidade que representassem suas paixões. Expandimos nosso catálogo para incluir livros, action figures, acessórios e muito mais.</p>
                 <p>Hoje, somos referência no segmento geek, atendendo milhares de clientes em todo o Brasil com produtos selecionados cuidadosamente e um atendimento que entende e compartilha da mesma paixão.</p>
-            </div>
+            </section>
 
-            <div class="mission-vision">
-                <div class="mission-card">
+            <section class="mission-vision">
+                <article class="mission-card">
                     <h3>Nossa Missão</h3>
                     <p>Oferecer os melhores produtos da cultura geek e nerd, proporcionando uma experiência de compra excepcional e conectando pessoas através de suas paixões compartilhadas.</p>
-                </div>
-                <div class="vision-card">
+                </article>
+                <article class="vision-card">
                     <h3>Nossa Visão</h3>
                     <p>Ser a loja geek mais amada do Brasil, reconhecida pela qualidade de nossos produtos, excelência no atendimento e por fortalecer a comunidade nerd nacional.</p>
-                </div>
-            </div>
+                </article>
+            </section>
 
-            <div class="about-section">
+            <section class="about-section">
                 <h2>Nossos Valores</h2>
                 <p><strong>Paixão pela Cultura Geek:</strong> Somos fãs antes de tudo. Cada produto é selecionado com cuidado e conhecimento.</p>
                 <p><strong>Qualidade Garantida:</strong> Trabalhamos apenas com fornecedores confiáveis e produtos de alta qualidade.</p>
                 <p><strong>Atendimento Humanizado:</strong> Entendemos nossos clientes porque somos como eles.</p>
                 <p><strong>Inovação Constante:</strong> Sempre buscamos novidades e tendências do universo geek.</p>
                 <p><strong>Comunidade:</strong> Acreditamos no poder de unir pessoas através de interesses comuns.</p>
-            </div>
+            </section>
 
-            <div class="about-section">
+            <section class="about-section">
                 <h2>Nossa Equipe</h2>
                 <p>Conheça as pessoas por trás da Nerdasso.com:</p>
                 
-                <div class="team-grid">
-                    <div class="team-member">
-                        <img src="../assets/img/perfil/anakin.png" alt="Rafael Oliveira">
+                <section class="team-grid">
+                    <article class="team-member">
+                        <img src="../assets/img/perfil/anakin.png" alt="Rafael Oliveira - CEO & Fundador, viciado em Star Wars" />
                         <h4>Rafael Sebastião</h4>
-                        <div class="role">CEO & Fundador</div>
+                        <p class="role">CEO & Fundador</p>
                         <p>Viciado em Star Wars e colecionador de legos action figures</p>
-                    </div>
-                    <div class="team-member">
-                        <img src="../assets/img/perfil/hermione.jpg" alt="Ana Santos">
+                    </article>
+                    <article class="team-member">
+                        <img src="../assets/img/perfil/hermione.jpg" alt="Ana Santos - Diretora de Produtos, especialista em cultura pop" />
                         <h4>Ana Santos</h4>
-                        <div class="role">Diretora de Produtos</div>
+                        <p class="role">Diretora de Produtos</p>
                         <p>Especialista em cultura pop e apaixonada por Harry Potter</p>
-                    </div>
-                    <div class="team-member">
-                        <img src="../assets/img/perfil/spider-man.png" alt="Carlos Lima">
+                    </article>
+                    <article class="team-member">
+                        <img src="../assets/img/perfil/spider-man.png" alt="Carlos Lima - Gerente de Marketing, fã de quadrinhos" />
                         <h4>Carlos Lima</h4>
-                        <div class="role">Gerente de Marketing</div>
+                        <p class="role">Gerente de Marketing</p>
                         <p>Fã de quadrinhos e expert em estratégias digitais</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </article>
+                </section>
+            </section>
+        </article>
     </main>
 
     <footer>
         <div class="footer-content">
-            <div class="footer-section">
+            <section class="footer-section">
                 <h3>Nerdasso.com</h3>
                 <p>Sua loja geek favorita com os melhores produtos da cultura nerd.</p>
-            </div>
-            <div class="footer-section">
+            </section>
+            <section class="footer-section">
                 <h3>Categorias</h3>
                 <ul>
                     <li><a href="produtos.html">Camisetas</a></li>
@@ -99,8 +100,8 @@
                     <li><a href="produtos.html">Brinquedos</a></li>
                     <li><a href="produtos.html">Acessórios</a></li>
                 </ul>
-            </div>
-            <div class="footer-section">
+            </section>
+            <section class="footer-section">
                 <h3>Links Úteis</h3>
                 <ul>
                     <li><a href="sobre.html">Sobre Nós</a></li>
@@ -108,15 +109,17 @@
                     <li><a href="#">Política de Privacidade</a></li>
                     <li><a href="#">Termos de Uso</a></li>
                 </ul>
-            </div>
-            <div class="footer-section">
+            </section>
+            <section class="footer-section">
                 <h3>Atendimento</h3>
-                <ul>
-                    <li>Email: contato@nerdasso.com</li>
-                    <li>Telefone: (11) 9999-9999</li>
-                    <li>Horário: Seg-Sex, 9h-18h</li>
-                </ul>
-            </div>
+                <address>
+                    <ul>
+                        <li>Email: <a href="mailto:contato@nerdasso.com">contato@nerdasso.com</a></li>
+                        <li>Telefone: <a href="tel:11999999999">(11) 9999-9999</a></li>
+                        <li>Horário: Seg-Sex, 9h-18h</li>
+                    </ul>
+                </address>
+            </section>
         </div>
         <div class="copyright">
             &copy; 2025 Nerdasso.com - Todos os direitos reservados.
